# nb-viewer

./: README.md  eg.ipynb  index.html  index.md  install  install.sh  jpath.py  nbv.desktop  nbv.py  nbvs.py  nbvsingle.py  notebook  notebook.desktop  notebook.py  notebook.pyx  path.py  pyproject.toml  read.txt  requirements.txt  setup.cfg  text-ipynb.xml  uninstall  uninstall.sh
.github/workflows/: blank.yml  build.yml  publish.yml
docs/: example.ipynb  index.html  index.md
docs/index_files/: style.css
index_files/: style.css
nbviewer/: main.py
nbviewergui/: notebook.desktop
src/: notebook.desktop  notebook.pyx
src/nbviewer/: main.py
templates/: index.html
